NOCC 1.8  ?? ??, ??

  Bugs
    * Bug #2593952 : User-friendly error message, if config file missing
      (Tobias Mathes).

  Patches
    * Patch #2502771 : Use new MailReader class (Tim Gerundt).

  Feature Requests
    * RFE #2593924 : Don't use source code in config file (Tobias Mathes).
    * RFE #2593901 : Slim down FCKeditor toolbar (Tim Gerundt).
    * RFE #2002532 : Group contacts via LDAP (Tobias Mathes).

  Misc
    * Add "Highest" and "Lowest" priority to sending (Tim Gerundt).
    * Show priority in mail view (Tim Gerundt).
    * Support priority column in inbox (Tim Gerundt).
    * Change "Forward" abbreviation from "Fw" to "Fwd" (Tim Gerundt).
    * Removed ".svn" folders from theme selections (Tobias Mathes).
    * Formatting of language file has been modified, for coorperation
      with TranslateWiki.net (Siebrand Mazeland).
    * Language files update (Siebrand Mazeland, TranslateWiki.net).

NOCC 1.7  January 01, 2008

  Bugs
    * Bug #2184243 : inconcistent reporting of new mail (Michiel van Loon).
    * Bug #2140106 : Calling download.php without prior login results in
      download (Oliver Heil).
    * Bug #2013844 : Javascript warning validate(f) send.php (Arnaud Boudou).
    * Bug #2009567 : Cannot delete one mail (Arnaud Boudou).

  Patches
    * Patch #2093879 : New page navigation for inbox (Tim Gerundt).
    * Patch #2028613 : Style attachments table in send.php (Tim Gerundt).
    * Patch #2019643 : Spanish translation (Juan).
    * Patch #2019010 : Change "receipt" checkbox in send form (Tim Gerundt).
    * Patch #2011244 : Updated Czech translation (Ragimiri).
    * Patch #2010065 : Optimize regexs for remote image security (Tim Gerundt).

  Feature Requests
    * RFE #2025620 : send_delay (Arnaud Boudou).
    * RFE #2025591 : login_prefix (Arnaud Boudou).

  Misc
    * Update FCKeditor to version 2.6.3 (Tim Gerundt).
    * Don't use JavaScript to open links in a new window (Tim Gerundt).